flux/base/manifests/deluge/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: deluge
  name: deluge
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: deluge
  template:
    metadata:
      labels:
        app.kubernetes.io/name: deluge
    spec:
      containers:
      - name: vpn-connect
        image: lscr.io/linuxserver/wireguard:latest
        securityContext:
          capabilities:
            add:
            - NET_ADMIN
          privileged: true
        volumeMounts:
        - name: wg-config
          mountPath: /config/wg_confs
        resources:
          limits:
            memory: 64Mi
          requests:
            memory: 64Mi
            cpu: 50m
      - image: lscr.io/linuxserver/deluge:2.2.0
        name: deluge
        resources:
          limits:
            memory: 512Mi
          requests:
            memory: 512Mi
            cpu: 250m
        ports:
        - containerPort: 8112
          protocol: TCP
        volumeMounts:
        - mountPath: /config
          name: config
        - mountPath: /downloads
          name: downloads
      volumes:
      - name: config
        hostPath:
          path: /megamind/config/deluge
      - name: downloads
        hostPath:
          path: /bigdata/media/downloads
      - name: wg-config
        secret:
          secretName: wg-config
